cria um prestador, e ajustes no dominio cliente
